--- a/src/app/components/main/components/top-bar/top-app-bar.component.html
+++ b/src/app/components/main/components/top-bar/top-app-bar.component.html
@@ -1,14 +1,13 @@
 <mat-toolbar class='mat-elevation-z4'>
   <div class='mat-toolbar__start'>
-    <button mat-icon-button aria-label='Open navigation drawer' (click)='toggleSidenav()'
-            class='menu-button'>
-      <app-icon name='menu'></app-icon>
+    <button mat-icon-button aria-label='Open navigation drawer' (click)='toggleSidenav()' class='menu-button'>
+      <app-icon name='menu' />
     </button>
-    <app-top-app-bar-logo></app-top-app-bar-logo>
+    <app-top-app-bar-logo />
   </div>
 
   <div class='mat-toolbar__center'>
-    <ng-container *ngIf='!(isHandset$ | async)' [ngComponentOutlet]='searchFormComponentOutlet'></ng-container>
+    <ng-container *ngIf='!(isHandset$ | async)' [ngComponentOutlet]='searchFormComponentOutlet' />
   </div>
 
   <div class='mat-toolbar__end'>
@@ -26,27 +25,27 @@
         <ng-container *ngIf='!(isHandset$ | async)'>
 
           <button mat-icon-button (click)='openSheet.emit()' matTooltip='Filtre'>
-            <app-icon name='tune'></app-icon>
+            <app-icon name='tune' />
           </button>
 
           <!-- Notification Button -->
-          <ng-container *ngComponentOutlet='NotificationButtonComponent'></ng-container>
+          <ng-container *ngComponentOutlet='NotificationButtonComponent' />
 
           <!-- Avatar Button -->
-          <ng-container *ngComponentOutlet='AvatarButtonComponent'></ng-container>
+          <ng-container *ngComponentOutlet='AvatarButtonComponent' />
         </ng-container>
 
         <ng-container *ngIf='(isHandset$ | async)'>
           <!-- Search Button -->
           <a mat-icon-button routerLink='/search'>
-            <app-icon name='search'></app-icon>
+            <app-icon name='search' />
           </a>
 
           <!-- Notification Button -->
-          <ng-container *ngComponentOutlet='NotificationButtonComponent'></ng-container>
+          <ng-container *ngComponentOutlet='NotificationButtonComponent' />
 
           <!-- Avatar Button -->
-          <ng-container *ngComponentOutlet='AvatarButtonComponent'></ng-container>
+          <ng-container *ngComponentOutlet='AvatarButtonComponent' />
         </ng-container>
       </ng-container>
 
@@ -70,17 +69,17 @@
 <ng-template #signIn>
   <ng-container *ngIf='isHandset$ | async'>
     <a mat-icon-button routerLink='/search'>
-      <app-icon name='search'></app-icon>
+      <app-icon name='search' />
     </a>
 
     <a mat-icon-button routerLink='/login'>
-      <app-icon name='account_circle'></app-icon>
+      <app-icon name='account_circle' />
     </a>
   </ng-container>
 
   <ng-container *ngIf='!(isHandset$ | async)'>
     <button mat-icon-button [matMenuTriggerFor]='moreMenu' matTooltip='Ayarlar'>
-      <app-icon name='more_vert'></app-icon>
+      <app-icon name='more_vert' />
     </button>
 
     <a mat-button routerLink='/login' (click)='signInButtonClicked()'>
