--- a/src/app/components/main/components/top-bar/components/search-form/search-form.component.scss
+++ b/src/app/components/main/components/top-bar/components/search-form/search-form.component.scss
@@ -22,8 +22,8 @@ input {
   border: none;
   width: 100%;
   height: 100%;
-  font-family: Archivo, sans-serif;
-  padding: 0 0 0 8px;
+  font-family: Roboto, sans-serif;
+  padding: 0;
   font-size: 16px;
   line-height: 20px;
   color: inherit;
@@ -51,13 +51,11 @@ input::placeholder, input::-moz-placeholder {
 ::ng-deep .my-autocomplete {
   max-height: calc(100vh - 64px) !important;
   margin-top: 4px !important;
-  border-radius: 8px !important;
+  border-radius: 24px !important;
 
   .mat-mdc-option {
-    height: 40px !important;
+    min-height: 32px !important;
     // padding-left: 56px !important;
-    font-size: 14px;
-    line-height: 20px;
     // letter-spacing: .25px;
   }
 
