--- a/src/app/components/home-question-list-item/home-question-list-item.component.html
+++ b/src/app/components/home-question-list-item/home-question-list-item.component.html
@@ -7,8 +7,7 @@
     </div>
 -->
 
-    <app-img-shadow [width]='40' [height]='40' src='{{question.user.picture}}' alt=''
-                     class='author-image-renderer' />
+    <app-img-shadow [width]='40' [height]='40' src='{{question.user.picture}}' alt='' class='author-image-renderer' />
 
   </a>
 
