--- a/src/app/components/main/components/top-bar/components/notification-button/notification-button.component.html
+++ b/src/app/components/main/components/top-bar/components/notification-button/notification-button.component.html
@@ -14,7 +14,7 @@
   [cdkConnectedOverlayOpen]='popupOpened'
   (overlayOutsideClick)='closePopupOnOutsideClicked($event)'>
   <app-popup-container (close)='popupOpened = false'>
-    <ng-container *ngComponentOutlet='NotificationListPopupComponent'></ng-container>
+    <ng-container *ngComponentOutlet='NotificationListPopupComponent' />
   </app-popup-container>
 </ng-template>
 
