--- a/src/app/components/site-code/site-code.component.html
+++ b/src/app/components/site-code/site-code.component.html
@@ -1,6 +1,6 @@
 <button mat-icon-button class='copy-code-btn' aria-label='Kod örneğini kopyala'
         matTooltip='Kod örneğini kopyala' (click)='copyCodeToClipboard()'>
-  <app-icon name='content_copy'></app-icon>
+  <app-icon name='content_copy' />
 </button>
 
 <div class='language-code' *ngIf='language'>{{language}}</div>
