--- a/src/app/components/main/components/top-bar/components/avatar-button/avatar-button.component.html
+++ b/src/app/components/main/components/top-bar/components/avatar-button/avatar-button.component.html
@@ -5,7 +5,7 @@
         #avatarButton='cdkOverlayOrigin' cdkOverlayOrigin
         (click)='togglePopup()'>
   <app-img-shadow [src]='user.picture' [width]='32' [height]='32' alt='Avatar resmi'
-                   class='topbar-avatar-button-renderer'></app-img-shadow>
+                   class='topbar-avatar-button-renderer' />
 </button>
 
 <ng-template
@@ -16,7 +16,7 @@
   (overlayOutsideClick)='closePopupOnOutsideClicked($event)'>
   <!--  <qa-popup-container popupContainerTitle="avatar" [outlet]="ironDropdownOutlet"></qa-popup-container>-->
   <app-popup-container (close)='popupOpened = false'>
-    <ng-container *ngComponentOutlet='UserProfilePopupComponent'></ng-container>
+    <ng-container *ngComponentOutlet='UserProfilePopupComponent' />
   </app-popup-container>
 </ng-template>
 
