--- a/src/app/components/main/components/top-bar/components/notification-button/notification-button.component.scss
+++ b/src/app/components/main/components/top-bar/components/notification-button/notification-button.component.scss
@@ -12,12 +12,11 @@ svg {
 }
 
 :host ::ng-deep .mat-badge-active {
-  width: 16px !important;
+ /* width: 16px !important;
   height: 16px !important;
   font-size: 10px !important;
   line-height: 16px !important;
   top: -8px !important;
   right: 4px !important;
-  font-family: 'Archivo', sans-serif;
-  font-weight: 600;
+  font-weight: 600;*/
 }
