--- a/src/app/components/progress-bar/progress-bar.component.html
+++ b/src/app/components/progress-bar/progress-bar.component.html
@@ -1,1 +1,2 @@
-<mat-progress-bar mode='indeterminate' *ngIf='spinner$ | async' />
+<!--<mat-progress-bar mode='indeterminate' *ngIf='spinner$ | async' />-->
+<mat-progress-bar mode='indeterminate' />
