--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -30,36 +30,11 @@ $my-palette: light-theme.$deep-purple-palette;
   flex: 1 0 auto;
 }
 
+/**
+  use mobile version tooltip
+ */
 .mdc-tooltip__surface {
   padding: 8px !important;
-}
-
-.mat-mdc-tooltip {
-  /*  font-size: 12px !important;
-    line-height: 16px !important;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.4px;
-    color: #fff !important;
-    background: rgba(0, 0, 0, 0.6) !important;
-    padding: 4px 8px !important;*/
-}
-
-@media (prefers-color-scheme: dark) {
-  .mat-mdc-snack-bar-container {
-    background: #e4e4e4;
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.14), 0 1px 18px rgba(0, 0, 0, 0.12), 0 3px 5px rgba(0, 0, 0, 0.2);
-    color: black;
-  }
-
-  .mat-mdc-tooltip {
-    background: #A0A0A0 !important;
-    color: #121212 !important;
-  }
-
-  .mat-mdc-menu-panel {
-    background-color: #2f2f2f;
-  }
 }
 
 .page-description {
@@ -161,13 +136,4 @@ h1, h2, h3, h4, h5, h6 {
   color: #000;
 }
 
-/*
-Error fix
- */
-/*TODO(mdc-migration): The following rule targets internal classes of form-field that may no longer apply for the MDC version.*/
-.mat-mdc-form-field.mat-form-field-invalid .mat-form-field-label,
-.mat-mdc-form-field-error,
-.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
-  color: #B00020;
-}
 
