--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -42,7 +42,8 @@ $dark-theme: mat.define-dark-theme((
   color: (
     primary: $dark-primary,
     accent: $dark-accent
-  )
+  ),
+  typography: mat.define-typography-config()
 ));
 
 @media (prefers-color-scheme: dark) {
@@ -81,7 +82,6 @@ svg {
 }
 
 .mat-mdc-list-item.active {
-  /* States_primary overlay/Selected */
   background: rgba(255, 255, 255, 0.08);
   color: #fff !important;
 
@@ -94,16 +94,6 @@ svg {
   }
 }
 
-/* TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
-.mat-progress-bar-background {
-  fill: #BB86FC;
-}
-
-/* TODO(mdc-migration): The following rule targets internal classes of progress-bar that may no longer apply for the MDC version.*/
-.mat-progress-bar-buffer {
-  background-color: #4c3f5b;
-}
-
 ::ng-deep mark {
   background-color: transparent;
   font-weight: 500;
@@ -114,12 +104,6 @@ svg {
 .mat-menu-item-highlighted {
   background-color: rgba(255, 255, 255, 0.12) !important;
   color: #ffffff;
-}
-
-/* TODO(mdc-migration): The following rule targets internal classes of tabs that may no longer apply for the MDC version.*/
-.mat-tab-label-active {
-  color: #BB86FC;
-  opacity: 1;
 }
 
 .search-form {
@@ -137,18 +121,6 @@ svg {
   border: 4px solid transparent;
   background-clip: content-box;
   background-color: #aaa;
-}
-
-/* TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
-mat-chip {
-  background-color: #ffffff12 !important;
-  border: 1px solid rgba(255, 255, 255, 0.12);
-}
-
-/* TODO(mdc-migration): The following rule targets internal classes of chips that may no longer apply for the MDC version.*/
-.mat-chip-selected {
-  background: rgba(187, 134, 252, 0.12) !important;
-  color: #fff !important;
 }
 
 .check-icon {
