--- a/src/app/components/main/components/top-bar/top-app-bar.component.html
+++ b/src/app/components/main/components/top-bar/top-app-bar.component.html
@@ -63,7 +63,6 @@
 
   <!--  <mat-progress-bar mode="indeterminate" *ngIf="spinner$ | async"></mat-progress-bar>-->
 
-
 </mat-toolbar>
 
 <ng-template #signIn>
@@ -78,7 +77,7 @@
   </ng-container>
 
   <ng-container *ngIf='!(isHandset$ | async)'>
-    <button mat-icon-button [matMenuTriggerFor]='moreMenu' matTooltip='Ayarlar'>
+    <button mat-icon-button [matMenuTriggerFor]='settingsMenu' matTooltip='Ayarlar'>
       <app-icon name='more_vert' />
     </button>
 
@@ -95,27 +94,26 @@
       </ng-template>
     </mat-menu>
 
-    <!-- More Menu -->
-    <mat-menu #moreMenu xPosition='before'>
+    <mat-menu #settingsMenu xPosition='before'>
       <ng-template matMenuContent>
         <button mat-menu-item>
-          <app-icon name='dark_mode'></app-icon>
+          <mat-icon>dark_mode</mat-icon>
           <span>Görünüm: Cihaz teması</span>
         </button>
         <button mat-menu-item>
-          <app-icon name='settings'></app-icon>
+          <mat-icon>settings</mat-icon>
           <span>Ayarlar</span>
         </button>
         <a mat-menu-item routerLink='/help'>
-          <app-icon name='help'></app-icon>
+          <mat-icon>help_outline</mat-icon>
           <span>Yardım</span>
         </a>
         <button mat-menu-item>
-          <app-icon name='feedback'></app-icon>
+          <mat-icon>feedback</mat-icon>
           <span>Geri bildirim gönder</span>
         </button>
         <button mat-menu-item>
-          <app-icon name='keyboard'></app-icon>
+          <mat-icon>keyboard</mat-icon>
           <span>Klavye kısayolları</span>
         </button>
       </ng-template>
