--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -37,10 +37,15 @@
               <span>Soru sor</span>
             </a>-->
 
-            <a mat-fab routerLink="/questions/create" extended>
+            <a mat-fab color="primary" routerLink="/quesionts/create" extended>
               <mat-icon>create</mat-icon>
               Soru sor
             </a>
+
+   <!--         <a mat-fab routerLink="/questions/create" extended>
+              <mat-icon>create</mat-icon>
+              Soru sor
+            </a>-->
 
           </div>
 
