--- a/src/app/components/main/components/nav-drawer/nav-drawer.component.html
+++ b/src/app/components/main/components/nav-drawer/nav-drawer.component.html
@@ -26,7 +26,7 @@
       Favori etiketler
     </a>
   </mat-nav-list>
-  <mat-divider></mat-divider>
+  <mat-divider />
   <mat-nav-list>
     <div matSubheader>Sayfalar</div>
     <a mat-list-item routerLinkActive='active' routerLink='/users' (click)='onClicked()'>
@@ -38,7 +38,7 @@
       Etiketler
     </a>
   </mat-nav-list>
-  <mat-divider></mat-divider>
+  <mat-divider />
   <mat-nav-list>
     <a mat-list-item routerLinkActive='active' routerLink='/settings' (click)='onClicked()'>
       <app-icon name='settings' matListItemIcon />
