--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -94,8 +94,19 @@ $secondary-gray-theme: mat.define-light-theme((
     --scrollbar-bg-color: #fafafa;
     --scrollbar-thumb-background: #c2c2c2;
     --thumb-bg-hover: #7d7d7d;
+
   }
 }
+
+// Override chips theme
+/*.mat-mdc-standard-chip.mat-primary.mat-mdc-chip-selected, .mat-mdc-standard-chip.mat-primary.mat-mdc-chip-highlighted {
+  --mdc-chip-elevated-container-color: #6200ee12
+}
+
+.mat-mdc-standard-chip {
+  --mdc-chip-elevated-container-color: #fff;
+  border: 1px solid rgba(0, 0, 0, .12)
+}*/
 
 /**
   Highlight.js
