update angular version

--- a/src/app/components/popups/user-profile-popup/user-profile-popup.component.html
+++ b/src/app/components/popups/user-profile-popup/user-profile-popup.component.html
@@ -1,6 +1,6 @@
 <div class='popup-page mat-elevation-z3'>
   <header>
-    <img class='popup-page__avatar' src='{{user.picture}}' alt='{{user.displayName}}'>
+    <img class='user-profile-avatar' src='{{user.picture}}' alt='{{user.displayName}}'>
     <div>
       <div class='title'>{{user.displayName}}</div>
       <div class='subtitle'>{{user.email}}</div>
