--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,63 +1,69 @@
-<header class='header'>
-  <div class='header__user'>
-    <div class='header-user__avatar'>
-      <app-img-shadow [width]='192' [height]='192' [src]='user.picture' [alt]='user.displayName'
-                       class='user-img-renderer' />
+<ng-container *ngIf="user$ | async as user">
+  <header class='header'>
+    <div class='header__user'>
+      <div class='header-user__avatar'>
+        <app-img-shadow [width]='192' [height]='192' [src]='user.picture' [alt]='user.displayName'
+                        class='user-img-renderer' />
 
-<!--      <img ngSrc="{{user.picture}}" alt="{{user.displayName}}" width="192" height="192" priority>-->
+        <img id="img" class="user-img-renderer" ngSrc="{{user.picture}}" alt="{{user.displayName}}" width="192" height="192" priority>
 
-    </div>
+        <!--      <img ngSrc="{{user.picture}}" alt="{{user.displayName}}" width="192" height="192" priority>-->
 
-    <div class='header__details'>
-      <h4 class='headline-4'>{{user.displayName}}</h4>
-      <div class='header__meta'>
+      </div>
 
-        <!-- Signup date -->
-        <div class='meta-item'>
-          <mat-icon>cake</mat-icon>
-          <time [attr.datetime]='user.signupDate'>{{user.signupDate | relativeTimeFormat}}</time>
-        </div>
+      <div class='header__details'>
+        <h4 class='headline-4'>{{user.displayName}}</h4>
+        <div class='header__meta'>
 
-        <!-- Last seen time -->
-        <div class='meta-item'>
-          <mat-icon>history</mat-icon>
-          <time [attr.datetime]='user.lastSeenTime'>{{user.lastSeenTime | myDate: 'tasty'}}</time>
-        </div>
+          <!-- Signup date -->
+          <div class='meta-item'>
+            <mat-icon>cake</mat-icon>
+            <time [attr.datetime]='user.signupDate'>{{user.signupDate | relativeTimeFormat}}</time>
+          </div>
 
-        <!-- Website url -->
-        <div class='meta-item'>
-          <mat-icon>web</mat-icon>
-          <span>blog.patrickmcdonald.org</span>
-        </div>
+          <!-- Last seen time -->
+          <div class='meta-item'>
+            <mat-icon>history</mat-icon>
+            <time [attr.datetime]='user.lastSeenTime'>{{user.lastSeenTime | myDate: 'tasty'}}</time>
+          </div>
 
-        <!-- Location -->
-        <div class='meta-item'>
-          <mat-icon>map</mat-icon>
-          <span>Dublin, Ireland</span>
-        </div>
+          <!-- Website url -->
+          <div class='meta-item'>
+            <mat-icon>web</mat-icon>
+            <span>blog.patrickmcdonald.org</span>
+          </div>
 
-        <!-- Social account links -->
-        <div class='social-auth'>
-          <a href='//github.com/{{user.githubUrl}}' target='_blank'>
-            <img src='https://webdev.imgix.net/images/icons/github.svg' alt=''>
-          </a>
-          <a href='//github.com/{{user.twitterUrl}}'>
-            <img src='https://webdev.imgix.net/images/icons/twitter.svg' alt=''>
-          </a>
+          <!-- Location -->
+          <div class='meta-item'>
+            <mat-icon>map</mat-icon>
+            <span>Dublin, Ireland</span>
+          </div>
+
+          <!-- Social account links -->
+          <div class='social-auth'>
+            <a href='//github.com/{{user.githubUrl}}' target='_blank'>
+              <img src='https://webdev.imgix.net/images/icons/github.svg' alt=''>
+            </a>
+            <a href='//github.com/{{user.twitterUrl}}'>
+              <img src='https://webdev.imgix.net/images/icons/twitter.svg' alt=''>
+            </a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
 
-<nav mat-tab-nav-bar mat-stretch-tabs="false" mat-align-tabs="center" [tabPanel]='tabPanel' fitInkBarToContent>
-  <a mat-tab-link *ngFor='let link of links'
-     [routerLinkActiveOptions]='{exact: true}'
-     routerLinkActive='mat-tab-label-active'
-     #rla='routerLinkActive'
-     routerLink='/user/{{user.id}}/{{link.path.toLocaleLowerCase()}}'
-     [active]='rla.isActive'> {{link.label}} </a>
-</nav>
-<mat-tab-nav-panel #tabPanel />
+  <nav mat-tab-nav-bar mat-stretch-tabs="false" mat-align-tabs="center" [tabPanel]='tabPanel' fitInkBarToContent>
+    <a mat-tab-link *ngFor='let link of links'
+       [routerLinkActiveOptions]='{exact: true}'
+       routerLinkActive='mat-tab-label-active'
+       #rla='routerLinkActive'
+       routerLink='/user/{{user.id}}/{{link.path.toLocaleLowerCase()}}'
+       [active]='rla.isActive'>{{link.label}} </a>
+  </nav>
+  <mat-tab-nav-panel #tabPanel />
 
-<router-outlet />
+  <router-outlet />
+
+</ng-container>
+
