angular 16 rc2 updates and refactor code starting...

--- a/src/app/page-not-found/page-not-found.component.scss
+++ b/src/app/page-not-found/page-not-found.component.scss
@@ -11,6 +11,8 @@
     display: inline-flex;
     width: 320px;
     height: 270px;
+    border: 2px solid black;
+    border-radius: 100vh;
   }
 
   p {
