--- a/src/app/tag/tag.component.html
+++ b/src/app/tag/tag.component.html
@@ -1,12 +1,10 @@
-<ng-container *ngIf='tag$ | async as tag'>
   <header>
-    <h6 class='headline-6'>{{tag.title}}</h6>
-    <p class='body-1 page-description'>Our latest news, updates, and stories about {{tag.title}}.</p>
+    <h6 class="headline-6">{{tag.title}}</h6>
+    <p class="body-1 page-description">Our latest news, updates, and stories about {{tag.title}}.</p>
   </header>
   <mat-divider />
 
-  <div class='items'>
-    <app-home-question-list-item *ngFor='let question of tag.questions'
-                                 [question]='question' />
+  <div class="items">
+    <app-home-question-list-item *ngFor="let question of tag.questions"
+                                 [question]="question" />
   </div>
-</ng-container>
