--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -131,3 +131,5 @@ h1, h2, h3, h4, h5, h6 {
 @import "m3.text.sys";
 @import "m3.button.sys";
 @import "m3.chips.sys";
+@import "m3.list.sys";
+@import "m3.tabs.sys";
