--- a/src/app/main/components/top-bar/components/notification-button/notification-button.component.html
+++ b/src/app/main/components/top-bar/components/notification-button/notification-button.component.html
@@ -4,7 +4,7 @@
         #notificationButton="cdkOverlayOrigin"
         cdkOverlayOrigin
         (click)="togglePopup()">
-  <app-icon name="notifications" matBadge="{{notificationCount$ | async}}" matBadgeColor="warn" matBadgeSize="small"
+  <app-icon name="notifications" matBadge="{{notificationCount$ | async}}" matBadgeColor="warn" matBadgeSize="medium"
             [matBadgeHidden]="(notificationCount$ | async) === 0" />
 </button>
 
