--- a/src/app/main/components/top-bar/components/top-app-bar-logo/top-app-bar-logo.component.scss
+++ b/src/app/main/components/top-bar/components/top-app-bar-logo/top-app-bar-logo.component.scss
@@ -7,6 +7,7 @@ a {
   margin-left: 16px;
 
   span {
+    font-family: Archivo, sans-serif;
     font-variation-settings: "wght" 900, "wdth" 151, "opsz" 8;
     letter-spacing: -1px;
   }
@@ -15,10 +16,9 @@ a {
 sup {
   font-family: Archivo, sans-serif;
   color: var(--medium-emphasis-color);
-  font-size: 12px;
-  font-weight: 500;
+  font-size: 10px;
   line-height: 1;
-  padding: 0 2px;
+  text-transform: uppercase;
 }
 
 @media (max-width: 599px) {
