--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,7 +37,7 @@ html, body {
 
 body {
   margin: 0;
-  font-family: Archivo, sans-serif;
+  font-family: Archivo, Roboto, "Helvetica Neue", sans-serif;
 }
 
 * {
