--- a/src/app/main/components/top-bar/top-app-bar.component.html
+++ b/src/app/main/components/top-bar/top-app-bar.component.html
@@ -6,7 +6,7 @@
     <app-top-app-bar-logo />
   </div>
 
-  <div class='mat-toolbar__center'>
+  <div class='mat-toolbar__center center-content'>
     <ng-container *ngIf='!(isHandset$ | async)' [ngComponentOutlet]='searchFormComponentOutlet' />
   </div>
 
