--- a/src/app/main/components/top-bar/components/search-form/search-form.component.scss
+++ b/src/app/main/components/top-bar/components/search-form/search-form.component.scss
@@ -9,7 +9,7 @@
   align-items: center;
   width: 720px;
   height: 56px;
-  background-color: #F1F3F4;
+  background: var(--m-3-sys-light-surface-container-high);
   padding-left: 8px;
   padding-right: 16px;
   border-radius: 28px;
@@ -57,10 +57,10 @@ mat-icon {
   max-height: calc(100vh - 64px) !important;
   border-radius: 24px !important;
   border-top: 1px solid #938F99;
-  background: #F1F3F5;
   border-top-left-radius: 0 !important;
   border-top-right-radius: 0 !important;
   box-shadow: none !important;
+
 
   .mat-mdc-option {
     // min-height: 32px !important;
