--- a/src/styles/m3.text.sys.scss
+++ b/src/styles/m3.text.sys.scss
@@ -4,7 +4,7 @@
   font-weight: 400;
   font-size: 57px;
   line-height: 64px;
-  letter-spacing: -0.25px;
+  // letter-spacing: -0.25px;
   color: #000000;
 }
 
@@ -29,10 +29,11 @@
 .m3-headline-large {
   /* M3/headline/large */
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   font-size: 32px;
   line-height: 40px;
   color: #000000;
+  font-stretch: semi-expanded;
 }
 
 .m3-headline-medium {
@@ -68,7 +69,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: 0.15px;
+  // letter-spacing: 0.15px;
 }
 
 .m3-title-small {
@@ -77,7 +78,7 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
-  letter-spacing: 0.1px;
+  // letter-spacing: 0.1px;
   color: #000000;
 }
 
@@ -87,7 +88,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  letter-spacing: 0.5px;
+  // letter-spacing: 0.5px;
   color: #000000;
 }
 
@@ -97,7 +98,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 20px;
-  letter-spacing: 0.25px;
+  // letter-spacing: 0.25px;
 }
 
 .m3-body-small {
@@ -115,7 +116,7 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
-  letter-spacing: 0.1px;
+  // letter-spacing: 0.1px;
   color: #000000;
 }
 
@@ -125,7 +126,7 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-  letter-spacing: 0.5px;
+  // letter-spacing: 0.5px;
   color: #000000;
 }
 
@@ -135,6 +136,6 @@
   font-weight: 500;
   font-size: 11px;
   line-height: 16px;
-  letter-spacing: 0.5px;
+  // letter-spacing: 0.5px;
   color: #000000;
 }
