minimal theme fixes

--- a/src/app/home/sort-by/sort-by.component.scss
+++ b/src/app/home/sort-by/sort-by.component.scss
@@ -68,7 +68,7 @@ app-icon {
 }
 
 .inek-menu-item-active {
-  background-color: #6200ee12  !important;
+  background-color: #E6E0E9;
   color: black;
 }
 
